better ui and exp/level

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,5 +4,6 @@
 body {
     margin: 0 ;
     padding: 0;
-    background-color: rgb(26, 26, 26);
+    background-color: #131312;
+    font-family: 'Cinzel', serif;
 }
