--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,17 @@
 @import 'tailwindcss';
 
+@theme {
+    --color-components: #151614;
+    --color-border-yellow: #C5A146;
+    --color-border-gray: #4C4C4C;
+    --color-text-y: #D4AF37;
+    --color-dark-light: #232323;
+    --color-border-dark: #303030
+}
 
 body {
     margin: 0 ;
-    padding: 0;
-    background-color: #131312;
-    font-family: 'Cinzel', serif;
+    padding: 1.5rem 2rem;
+    background-color: #232323;
+    font-family: "MedievalSharp";
 }
